@@ -1,13 +1,0 @@
-toggles:
-$('#points').bootstrapToggle('off')
-
-text:
-$('#hed').val('test')
-
-checkboxes:
-$('#nologo').attr('checked',true)
-
-
-selects:
-$('#line_select_grouping').val('y')
-$('#line_select_grouping').selectpicker('refresh')
